# up_core

./: .gitignore  CMakeLists.txt  README.md  package.xml  py_test.py  requirements.txt  setup.py  uio.py  uio_s.py  uio_u.py  up.py
bind/: wrapper.cpp
doc/: firmware_update.md  pup_core.md  search_id.md  serial_manager.md  servo_manager.md  uio.md  uio_s.md  uio_u.md  up.md  环境搭建文档.md
examples/: serial_example.cc
file/: record  上位机发.txt  单片机返回.txt
include/: add.h  firmware_update.h  logger.h  servo.h  servo_manager.h  servo_protocol.h  servo_protocol_parse.h  system_up.h
include/serial/: serial.h
include/serial/impl/: unix.h
include/unix/: adc.h  gpio.h  spi.h
pup_core/: __init__.py  __main__.py  app.py  c_serial.py  core.py  dependencies.py  exceptions.py  serial_manager.py  servo_parser.py  signals.py
pup_core/http_routes/: __init__.py  motor_api.py  serial_api.py  servo_api.py  status_api.py
pup_core/model/: EEPROMData.py  RAMData.py  notification_type.py  request_models.py  response_models.py  up_core.py  up_exception.py
pup_core/process/: zero_mq_search.py
pup_core/proto/: README.md  __init__.py  message.proto  message_pb2.py  notification.proto  notification_pb2.py  request.proto  request_pb2.py  response.proto  response_pb2.py
pup_core/serial/: c_serial.py  load_info_controller.py  load_info_task.py  serial_manager.py  serial_port.py  servo_parser.py
pup_core/utils/: resolve.py
pup_core/ws_routes/: __init__.py  chat.py  message.py  notifications.py
scripts/: build.sh  clean.sh  env.sh  install.sh  pack.sh  source.sh  test.sh
src/: adc.cpp  add.cpp  firmware_update.cpp  gpio.cpp  logger.cpp  main.cpp  serial.cc  servo.cpp  servo_manager.cpp  servo_protocol.cpp  servo_protocol_parse.cpp  spi.cpp  system_up.cpp
src/impl/: unix.cc  win.cc
src/impl/list_ports/: list_ports_linux.cc  list_ports_win.cc
src/unix/: adc.cpp  gpio.cpp  spi.cpp
tests/: CMakeLists.txt  py_test.py  run_fw_update.py  run_serial_request.py  run_ws.py  test_add.py  test_exceptions.py  test_logger.py  test_notification.py  test_request.py  test_response.py  test_serial.cpp  test_serial_request.py  test_servo.cpp  test_servo_parser.py  test_servo_protocol.cpp  test_ws.py  unix_serial_tests.cc  zmq_client.py  zmq_server.py
tests/unit/: unix_timer_tests.cc
