<?xml version="1.0"?>
<package>
    <name>up_core</name>
    <version>1.0.0</version>
    <description>Serial communication core library</description>

    <maintainer email="milanxiaotiejiang@email.com">noodles</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>
